# bank-api-fastapi

./: .env.example  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 3a7746e53b79_initial.py
src/: main.py
