[tool.poetry]
name = "bank-api-fastapi"
version = "0.1.0"
description = ""
authors = ["Jezebel Guedes <jezebelguedes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "^0.38.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
