[tool.poetry]
name = "bank-api-fastapi"
version = "0.1.0"
description = ""
authors = ["Jezebel Guedes <jezebelguedes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pyjwt = "^2.10.1"
databases = {extras = ["sqlite"], version = "^0.9.0"}
sqlalchemy = "^2.0.44"
alembic = "^1.17.2"
aiosqlite = "^0.21.0"
pydantic-settings = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
